--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
         <section id="features" class="[&>*+*]:mt-6 bg-trb-orange4 bg-opacity-10">
             <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 flow">
                 <div class="[&>*+*]:mt-3 text-sm xl:text-lg text-trb-black3 dark:text-trb-grey3 max-w-[45ch]">
-                    <h2 class="font-heading-bold text-4xl font-black">With other features</h2>
+                    <h2 class="font-heading-bold text-4xl font-black text-trb-black2 dark:text-trb-grey4">With other features</h2>
                     <p>From QR code templates to custom domains, Bolt offers you all the features that you might need.
                     </p>
                 </div>
@@ -194,16 +194,16 @@
         </section>
         <section id="types">
             <div class="max-w-screen-xl mx-auto pt-8 pb-12 px-[2.5%] md:py-20 [&>*+*]:mt-6">
-                <div class="[&>*+*]:mt-3">
-                    <h2 class="">QR code types.</h2>
+                <div class="[&>*+*]:mt-3 max-w-[45ch]">
+                    <h2 class="font-heading-bold text-4xl font-black">QR code types.</h2>
                     <p>QR codes can be used for multiple purposes! So here you have a large array of QR code templates
                         to choose
                         from
                         and get started.</p>
                 </div>
-                <ul class="wrapper-grid wrapper-grid--4">
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                <ul class="[&>*+*]:mt-3 mt-6 grid items-center justify-center gap-8 py-6 md:grid-cols-2 lg:grid-cols-4">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="12.71" height="14.83" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/text.SVG#text"></use>
                             </svg>
@@ -211,8 +211,8 @@
                         </h3>
                         <p>Generate easy & customizable Text QR codes in minutes.</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="15" height="15" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/url.SVG#url"></use>
                             </svg>
@@ -220,8 +220,8 @@
                         </h3>
                         <p>Generate easy & customizable Text QR codes in minutes.</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="15" height="15" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/phone.SVG#phone"></use>
                             </svg>
@@ -229,8 +229,8 @@
                         </h3>
                         <p>Get calls from people by scaning the QR code</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="16" height="16" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/sms.SVG#sms"></use>
                             </svg>
@@ -238,8 +238,8 @@
                         </h3>
                         <p>Get custom SMS from people by scaning the QR code</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="18" height="14.79" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/email.SVG#email"></use>
                             </svg>
@@ -247,8 +247,8 @@
                         </h3>
                         <p>Get custom email from people by scaning the QR code</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1 fill-current">
                             <svg class="icons-deco" width="14" height="14" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/whatsapp.svg#whatsapp"></use>
                             </svg>
@@ -256,8 +256,8 @@
                         </h3>
                         <p>Get custom Whatsapp messages from people by scaning the QR code</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1 fill-current">
                             <svg class="icons-deco" width="16" height="15" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/facetime.SVG#facetime"></use>
                             </svg>
@@ -265,8 +265,8 @@
                         </h3>
                         <p>Get Facetime calls from people by scaning the QR code</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="16" height="16" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/location.SVG#location"></use>
                             </svg>
@@ -274,8 +274,8 @@
                         </h3>
                         <p>Embed location coordinates for people to get directions more easily</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="16" height="16" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/wifi.SVG#wifi"></use>
                             </svg>
@@ -283,8 +283,8 @@
                         </h3>
                         <p>Create WiFi QR codes and let people conect to your WiFi more easly</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="16" height="16" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/event.SVG#event"></use>
                             </svg>
@@ -292,8 +292,8 @@
                         </h3>
                         <p>Generate a custom life calendar event and embed it into a QR code </p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="16" height="16" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/crypto.SVG#crypto"></use>
                             </svg>
@@ -301,8 +301,8 @@
                         </h3>
                         <p>Get paid in crypto from people by scaning the QR code</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="22" height="16" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/vcard.SVG#vcard"></use>
                             </svg>
@@ -310,8 +310,8 @@
                         </h3>
                         <p>Embed your contact data into a digital bussines card</p>
                     </li>
-                    <li class="card card--types">
-                        <h3 class="card__title">
+                    <li class="grid min-h-[188px] max-w-[226px] p-4 gap-2 grid-rows-2 rounded-xl shadow-xl shadow-trb-orange0/20 text-sm text-trb-black2 bg-white">
+                        <h3 class="self-end flex justify-center gap-2 font-heading-bold font-black text-base text-trb-orange1">
                             <svg class="icons-deco" width="16" height="16" aria-hidden="true" focusable="false">
                                 <use href="/public/img/home/qrcodetypesicons/paypal.SVG#paypal"></use>
                             </svg>
